--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+*, 
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -15,4 +21,7 @@ a {
 
 img {
     max-width: 100%;
+    display: block;
 }
+
+
