--- a/style.css
+++ b/style.css
@@ -1,44 +1,49 @@
-*, 
+*,
 *::after,
 *::before {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    overflow: hidden;
+	margin: 0;
+	padding: 0;
+	font-size: 20px;
+	font-family: Arial, Helvetica, sans-serif;
+	overflow: hidden;
 }
 
 h1 {
-    font-size: 20px;
- 
+	font-size: 20px;
 }
 
 p {
-    font-size: 16px;
+	font-size: 16px;
 }
 
 a {
-    text-decoration: none;
+	text-decoration: none;
 }
 
 img {
-    max-width: 100%;
-    display: block;
+	max-width: 100%;
+	display: block;
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
 }
 
 button {
-    display: inline-block;
-    border: none;
+	display: inline-block;
+	border: none;
 }
 
+.test {
+	display: flex;
+}
 
+.testtwo {
+	display: grid;
+}
